test-cases/valid/reject/return_statement_type_mismatch.ul
void main() {
    foo();
}

boolean foo() {
    return 'f'; // Mismatched return types
}
